# Back/api/medias/mediaroutes.js
@@ -1,17 +1,17 @@
 const express = require("express");
 const router = express.Router();
 const {
-    getMedia,
-    getMediaById,
-    createMedia,
-    updateMedia,
-    deleteMedia
+    getMedias,
+    getMediasById,
+    createMedias,
+    updateMedias,
+    deleteMedias
 } = require("./mediacontroller");
 
-router.get("/", getMedia);
-router.get("/:id", getMediaById);
-router.post("/", createMedia);
-router.put("/:id", updateMedia);
-router.delete("/:id", deleteMedia);
+router.get("/", getMedias);
+router.get("/:id", getMediasById);
+router.post("/", createMedias);
+router.put("/:id", updateMedias);
+router.delete("/:id", deleteMedias);
 
 module.exports = router;
